--- a/index.html
+++ b/index.html
@@ -2,48 +2,48 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<!-- <link
 		rel="stylesheet"
-		href="./reset.css"
+		href="./frame.css"
 	> -->
 	<link
 		rel="stylesheet"
-		href="./sample_style.css"
+		href="./style.css"
 	>
-	<title>sample</title>
+	<title>猫カフェ</title>
 </head>
 <body>
 	<!-- header -->
 	<header class="header">
-		.header
+		猫カフェ
 		<div class="header__wrap">
-			.header__wrap
+				ねことコーヒーの家
 			<div class="header__logo">
-				.header__logo
-				<a href=""><img src=""></a>
+				
+				<a href=""><img src="./img/neko.png"></a>
 			</div>
 			<ul class="header__menu">
-				<li><a href="">Home</a></li>
-				<li><a href="">li</a></li>
-				<li><a href="">li</a></li>
-				<li><a href="">li</a></li>
+				<li><a href="">ほーむ</a></li>
+				<li><a href="">りょうきん</a></li>
+				<li><a href="">にゅーす</a></li>
+				<li><a href="">れんらくさき</a></li>
 			</ul>
 		</div>
 	</header>
 	<!-- main -->
 	<main class="main">
-		.main
+		猫の紹介
 		<section class="main__kv">
-			.main__kv
+			
 		</section>
 		<section class="main__about">
 			.main__about
-			<h1 class="main__about--ttl">Title</h1>
+			<h1 class="main__about--ttl">とらまる</h1>
 			<div class="main__about--logo">
-				<img src="">
+				<img src="img/neko.png">
 			</div>
-			<p class="main__about--txt">text</p>
+			<p class="main__about--txt">あああああああああああああああああああああああああ</p>
 		</section>
 		<section class="main__service">
 			.main__service
@@ -54,21 +54,21 @@
 			<ul class="main__service--list">
 				<li>
 					<a href="">
-						<img src="">
+						<img src="./img/cat_omotikaeri.jpg">
 						<h3>title</h3>
 						<p>text</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="">
+						<img src="./img/cat_sleep.jpg">
 						<h3>title</h3>
 						<p>text</p>
 					</a>
 				</li>
 				<li>
 					<a href="">
-						<img src="">
+						<img src="./img/cat2.jpg">
 						<h3>title</h3>
 						<p>text</p>
 					</a>
@@ -76,7 +76,7 @@
 			</ul>
 		</section>
 		<section class="main__news">
-			.main__news
+			しんちゃくじょうほう
 			<h2 class="main__news--ttl">h2 title</h2>
 			<ul class="main__news--list">
 				.main__news--list
