--- a/index.html
+++ b/index.html
@@ -2,11 +2,14 @@
 <html lang="ja">
 <head>
 	<meta charset="UTF-8">
-	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<!-- <link
+	<meta
+		name="viewport"
+		content="width=device-width, initial-scale=1"
+	>
+	<link
 		rel="stylesheet"
 		href="./frame.css"
-	> -->
+	>
 	<link
 		rel="stylesheet"
 		href="./style.css"
@@ -18,9 +21,9 @@
 	<header class="header">
 		猫カフェ
 		<div class="header__wrap">
-				ねことコーヒーの家
+			ねことコーヒーの家
 			<div class="header__logo">
-				
+
 				<a href=""><img src="./img/neko.png"></a>
 			</div>
 			<ul class="header__menu">
@@ -35,7 +38,7 @@
 	<main class="main">
 		猫の紹介
 		<section class="main__kv">
-			
+
 		</section>
 		<section class="main__about">
 			.main__about
