--- a/index.html
+++ b/index.html
@@ -1,124 +1,108 @@
 <!DOCTYPE html>
 <html lang="ja">
-<head>
-	<meta charset="UTF-8">
-	<meta
-		name="viewport"
-		content="width=device-width, initial-scale=1"
-	>
-	<link
-		rel="stylesheet"
-		href="./frame.css"
-	>
-	<link
-		rel="stylesheet"
-		href="./style.css"
-	>
-	<title>猫カフェ</title>
-</head>
-<body>
-	<!-- header -->
-	<header class="header">
-		猫カフェ
-		<div class="header__wrap">
-			ねことコーヒーの家
-			<div class="header__logo">
-
-				<a href=""><img src="./img/neko.png"></a>
-			</div>
-			<ul class="header__menu">
-				<li><a href="">ほーむ</a></li>
-				<li><a href="">りょうきん</a></li>
-				<li><a href="">にゅーす</a></li>
-				<li><a href="">れんらくさき</a></li>
-			</ul>
-		</div>
-	</header>
-	<!-- main -->
-	<main class="main">
-		猫の紹介
-		<section class="main__kv">
-
-		</section>
-		<section class="main__about">
-			.main__about
-			<h1 class="main__about--ttl">とらまる</h1>
-			<div class="main__about--logo">
-				<img src="img/neko.png">
-			</div>
-			<p class="main__about--txt">あああああああああああああああああああああああああ</p>
-		</section>
-		<section class="main__service">
-			.main__service
-			<div class="main__service--message">
-				<h2>title</h2>
-				<p>text</p>
-			</div>
-			<ul class="main__service--list">
-				<li>
-					<a href="">
-						<img src="./img/cat_omotikaeri.jpg">
-						<h3>title</h3>
-						<p>text</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./img/cat_sleep.jpg">
-						<h3>title</h3>
-						<p>text</p>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<img src="./img/cat2.jpg">
-						<h3>title</h3>
-						<p>text</p>
-					</a>
-				</li>
-			</ul>
-		</section>
-		<section class="main__news">
-			しんちゃくじょうほう
-			<h2 class="main__news--ttl">h2 title</h2>
-			<ul class="main__news--list">
-				.main__news--list
-				<li>
-					<a href="">
-						<dl class="main__news--item">
-							<dt class="main__news--day">2021.08.26</dt>
-							<dd class="main__news--data">text</dd>
-						</dl>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<dl class="main__news--item">
-							<dt class="main__news--day">2021.08.26</dt>
-							<dd class="main__news--data">text</dd>
-						</dl>
-					</a>
-				</li>
-				<li>
-					<a href="">
-						<dl class="main__news--item">
-							<dt class="main__news--day">2021.08.26</dt>
-							<dd class="main__news--data">text</dd>
-						</dl>
-					</a>
-				</li>
-			</ul>
-		</section>
-	</main>
-	<footer class="footer">
-		.footer
-		<div class="footer__logo">
-			<img
-				src=""
-				alt=""
-			>
-		</div>
-		<div class="footer__copy">copy</div>
-	</footer>
-</body>
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <!-- <link rel="stylesheet" href="./frame.css" /> -->
+        <link rel="stylesheet" href="./style.css" />
+        <title>猫カフェ</title>
+    </head>
+    <body>
+        <!-- header -->
+        <header class="header">
+            <div class="header__wrap">
+                ねことコーヒーの家
+                <div class="header__logo">
+                    <a href=""><img src="./img/neko.png" /></a>
+                </div>
+                <ul class="header__menu">
+                    <li><a href="">ほーむ</a></li>
+                    <li><a href="">りょうきん</a></li>
+                    <li><a href="">にゅーす</a></li>
+                    <li><a href="">れんらくさき</a></li>
+                </ul>
+            </div>
+        </header>
+        <!-- main -->
+        <main class="main">
+            猫の紹介
+            <section class="main__kv"></section>
+            <section class="main__about">
+                .main__about
+                <h1 class="main__about--ttl">とらまる</h1>
+                <div class="main__about--logo">
+                    <img src="img/neko.png" />
+                </div>
+                <p class="main__about--txt">あああああああああああああああああああああああああ</p>
+            </section>
+            <section class="main__service">
+                .main__service
+                <div class="main__service--message">
+                    <h2>title</h2>
+                    <p>text</p>
+                </div>
+                <ul class="main__service--list">
+                    <li>
+                        <a href="">
+                            <img src="./img/cat_omotikaeri.jpg" />
+                            <h3>title</h3>
+                            <p>text</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./img/cat_sleep.jpg" />
+                            <h3>title</h3>
+                            <p>text</p>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <img src="./img/cat2.jpg" />
+                            <h3>title</h3>
+                            <p>text</p>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+            <section class="main__news">
+                しんちゃくじょうほう
+                <h2 class="main__news--ttl">h2 title</h2>
+                <ul class="main__news--list">
+                    .main__news--list
+                    <li>
+                        <a href="">
+                            <dl class="main__news--item">
+                                <dt class="main__news--day">2021.08.26</dt>
+                                <dd class="main__news--data">text</dd>
+                            </dl>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <dl class="main__news--item">
+                                <dt class="main__news--day">2021.08.26</dt>
+                                <dd class="main__news--data">text</dd>
+                            </dl>
+                        </a>
+                    </li>
+                    <li>
+                        <a href="">
+                            <dl class="main__news--item">
+                                <dt class="main__news--day">2021.08.26</dt>
+                                <dd class="main__news--data">text</dd>
+                            </dl>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+        </main>
+        <footer class="footer">
+            .footer
+            <div class="footer__logo">
+                <img src="" alt="" />
+            </div>
+            <div class="footer__copy">copy</div>
+        </footer>
+    </body>
 </html>
