--- a/index.html
+++ b/index.html
@@ -25,10 +25,9 @@
         </header>
         <!-- main -->
         <main class="main">
-            猫の紹介
             <section class="main__kv"></section>
             <section class="main__about">
-                .main__about
+                CONSEPT
                 <h1 class="main__about--ttl">とらまる</h1>
                 <div class="main__about--logo">
                     <img src="img/neko.png" />
